--- a/stop-mining.html
+++ b/stop-mining.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container justify-content-center align-items-center align-content-center justify-content-md-center align-items-md-center" style="background: url(&quot;assets/img/Note4X-360x640-ETH-1.svg&quot;) center no-repeat;width: 100%;height: 100vh;text-align: center;opacity: 1;min-width: 360px;max-width: 360px;min-height: 640px;"><a class="btn btn-primary btn-lg text-center" role="button" href="index.html" style="height: 60px;margin-top: 80vh;color: rgba(255,255,255,0);background: rgb(0,123,255);opacity: 0;min-width: 330px;margin-right: 0px;margin-left: 0px;"></a><a class="btn btn-primary text-center d-flex" role="button" style="margin-top: -52vh;opacity: 0;min-width: 114px;height: 45px;margin-right: 37vh;padding-right: 19px;padding-top: 6px;text-align: center;margin-left: 194px;" href="withdraw.html">Button</a></div>
+    <div class="container" style="background: url(&quot;assets/img/Note4X-360x640-ETH-1.svg&quot;) center no-repeat;width: 100%;height: 100vh;text-align: center;opacity: 1;min-width: 360px;max-width: 360px;min-height: 640px;"><a class="btn btn-primary btn-lg text-center" role="button" href="index.html" style="height: 60px;margin-top: 80vh;color: rgba(255,255,255,0);background: rgb(0,123,255);opacity: 0;min-width: 330px;margin-right: 0px;margin-left: 0px;"></a><a class="btn btn-primary text-center d-flex" role="button" style="margin-top: -52vh;opacity: 0;min-width: 114px;height: 45px;margin-right: 37vh;padding-right: 19px;padding-top: 6px;text-align: center;margin-left: 194px;" href="withdraw.html">Button</a></div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
